Inline Unsafe Code used by RuntimeEnumExtender, making it independent of MCF Unsafe library
Adds tests for the runtime enum extender as well.